base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: inventory
  labels:
    app: inventory
    app.kubernetes.io/component: backstage
    backstage.io/kubernetes-id: thegoodcorner-inventory
spec:
  to:
    kind: Service
    name: inventory
    weight: 100
  port:
    targetPort: http-8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
